cannot get rid of red

--- a/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/propertysections/messages.properties
+++ b/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/propertysections/messages.properties
@@ -10,8 +10,11 @@ AccessRelationshipSection_3=Read/Write
 AccessRelationshipSection_4=Access Type:
 AccessRelationshipSection_5=Access Type
 
+LineDecorationSection_0=Line Decoration
+LineDecorationSection_1=Default
+
 ShapeSection_0=Shape
-ShapeSection_1=Shape2
+ShapeSection_1=Default
 
 ZentaElementSection_0=Add a name for this element here
 ZentaElementSection_1=Add documentation relating to this element here
