basic object and relation got their final name

--- a/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/ui/messages.properties
+++ b/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/ui/messages.properties
@@ -11,4 +11,4 @@ ZentaLabelProvider_5={0} aggregates {1}
 ZentaLabelProvider_6={0} triggers {1}
 ZentaLabelProvider_7={0} flows to {1}
 ZentaLabelProvider_8={0} accesses {1}
-ZentaLabelProvider_9={0} is associated with {1}
+ZentaLabelProvider_9={0} relates to {1}
