--- a/org.rulez.magwas.zenta.export/styles/testbed/baseline/docbook/index.docbook
+++ b/org.rulez.magwas.zenta.export/styles/testbed/baseline/docbook/index.docbook
@@ -2138,7 +2138,7 @@
                            </tr>
                            <tr>
                               <td>default:select</td>
-                              <td>//zenta:Network[@id=//zenta:AssociationRelationship[@source=$id]/@target]/@name</td>
+                              <td>//zenta:Network[@id=//zenta:BasicRelationship[@source=$id]/@target]/@name</td>
                            </tr>
                            <tr>
                               <td>default:multi</td>
