--- a/org.rulez.magwas.zenta.templates/src/org/rulez/magwas/zenta/templates/impl/wizard/messages.properties
+++ b/org.rulez.magwas.zenta.templates/src/org/rulez/magwas/zenta/templates/impl/wizard/messages.properties
@@ -1,12 +1,12 @@
-NewZentaModelFromTemplateWizard_0=New ZentaMate Model
+NewZentaModelFromTemplateWizard_0=New Zenta Model
 NewZentaModelFromTemplateWizard_1=(new)
 NewZentaModelFromTemplateWizard_2=Unknown format
 NewZentaModelFromTemplateWizard_3=Error opening file
 
-NewZentaModelFromTemplateWizardPage_1=New ZentaMate Model
+NewZentaModelFromTemplateWizardPage_1=New Zenta Model
 NewZentaModelFromTemplateWizardPage_2=Choose a Template for your Model
 
-SaveZentaModelAsTemplateToCollectionWizardPage_1=Save ZentaMate Model As Template
+SaveZentaModelAsTemplateToCollectionWizardPage_1=Save Zenta Model As Template
 SaveZentaModelAsTemplateToCollectionWizardPage_2=Choose whether to include the template in your collection.
 
 SaveZentaModelAsTemplateWizard_0=Save Model As Template
@@ -18,7 +18,7 @@ SaveZentaModelAsTemplateWizardPage_10=Key thumbnail:
 SaveZentaModelAsTemplateWizardPage_11=Choose a file name
 SaveZentaModelAsTemplateWizardPage_14=Provide a file name
 SaveZentaModelAsTemplateWizardPage_15=Provide a template name
-SaveZentaModelAsTemplateWizardPage_2=Save ZentaMate Model As Template
+SaveZentaModelAsTemplateWizardPage_2=Save Zenta Model As Template
 SaveZentaModelAsTemplateWizardPage_3=Provide the Template's file location, name, description and key thumbnail.
 SaveZentaModelAsTemplateWizardPage_4=File:
 SaveZentaModelAsTemplateWizardPage_5=New Template
