--- a/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/views/tree/actions/messages.properties
+++ b/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/views/tree/actions/messages.properties
@@ -20,7 +20,7 @@ SaveModelAction_0=Save
 SaveModelAction_1=Error saving file
 SortFolderAction_0=Sort elements
 
-TreeModelViewActionFactory_0=&ZentaMate View
-TreeModelViewActionFactory_1=New ZentaMate View
+TreeModelViewActionFactory_0=&Zenta View
+TreeModelViewActionFactory_1=New Zenta View
 TreeModelViewActionFactory_2=&Sketch View
 TreeModelViewActionFactory_3=New Sketch
