got rid of folder types

--- a/org.rulez.magwas.zenta.model/src/org/rulez/magwas/zenta/model/impl/messages.properties
+++ b/org.rulez.magwas.zenta.model/src/org/rulez/magwas/zenta/model/impl/messages.properties
@@ -1,9 +1,1 @@
-ZentaModel_0=Business
-ZentaModel_1=Application
-ZentaModel_2=Technology
-ZentaModel_3=Motivation
-ZentaModel_4=Implementation & Migration
-ZentaModel_5=Connectors
-ZentaModel_6=Relations
-ZentaModel_7=Views
-ZentaModel_8=Derived Relations
+ZentaModel_0=Model Root
