--- a/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/actions/messages.properties
+++ b/org.rulez.magwas.zenta.editor/src/org/rulez/magwas/zenta/editor/actions/messages.properties
@@ -30,7 +30,7 @@ ImportModelAction_0=Error importing file
 
 MRUMenuManager_0=Open Recent
 MRUMenuManager_1=Open File
-MRUMenuManager_2=''{0}'' cannot be found
+MRUMenuManager_2=''{0}'' cannot be opened
 MRUMenuManager_3=Clear Menu
 
 NewZentaModelAction_0=&Empty Model
